Create the tic-tac-toe board with css and html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,38 @@
 </head>
 
 <body>
+    <div class="game">
+        <div class="title">
+            <h1> TIC TAC TOE</h1>
+        </div>
+        <div class="gameboard">
+            <div class="square">X</div>
+            <div class="square">O</div>
+            <div class="square">O</div>
+            <div class="square">O</div>
+            <div class="square">X</div>
+            <div class="square">O</div>
+            <div class="square">O</div>
+            <div class="square">X</div>
+            <div class="square">X</div>
+        </div>
+        <div class="scores">
+            <div class="p1">
+                <div class="name">P1</div>
+                <div class="p1_score">1</div>
+            </div>
+            <div class="opponent">
+                <div class="name_and_difficulty">
+                    <div class="name">CPU</div>
+                    <div class="difficulty">EASY</div>
+                </div>
+                <div class="opponent_score">0</div>
+            </div>
+        </div>
+        <div class="restart">
+            <button id="restartBtn">RESTART</button>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 
