Add footer and adjust css styles

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             <button id="restartBtn">RESTART</button>
         </div>
     </div>
+    <footer>
+        <div>Copyright &copy 2023 bauera-cloud </div>
+        <a href="https://github.com/bauera-cloud"><img id="githubImg" src="./images/github-mark.png"
+                alt="github-mark"></a>
+    </footer>
     <script src="index.js"></script>
 </body>
 
