Add DOM functionality to change opponent text
Now a user can toggle the text for the opponent they decide to play
against.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <h1> TIC TAC TOE</h1>
         </div>
         <div class="gameboard">
-            <div class="square">X</div>
-            <div class="square">O</div>
-            <div class="square">O</div>
-            <div class="square">O</div>
-            <div class="square">X</div>
-            <div class="square">O</div>
-            <div class="square">O</div>
-            <div class="square">X</div>
-            <div class="square">X</div>
+            <div class="square"> </div>
+            <div class="square"> </div>
+            <div class="square"> </div>
+            <div class="square"> </div>
+            <div class="square"> </div>
+            <div class="square"> </div>
+            <div class="square"> </div>
+            <div class="square"> </div>
+            <div class="square"> </div>
         </div>
         <div class="scores">
             <div class="p1">
@@ -32,8 +32,8 @@
             </div>
             <div class="opponent">
                 <div class="name_and_difficulty">
-                    <div class="name">CPU</div>
-                    <div class="difficulty">EASY</div>
+                    <span class="name">CPU</span>
+                    <span class="difficulty">EASY</span>
                 </div>
                 <div class="opponent_score">0</div>
             </div>
