Add ability to place tokens via DOM manipulation
The game is playable through the console or using the webpage.
In order to accomplish this, first, the prompts to the user had
to be removed. Any code that manipulated an expected string had
to be changed to expect two numbers.

Then, each square upon creation was given a row and column property
denoting its location on the board as it was created from the board
array. Then the playRound() function was able to use those numbers.

In addition, the board waits for a response after a player has scored
a point before restarting the game.

Lastly, the restart button clears the board.

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
             <h1> TIC TAC TOE</h1>
         </div>
         <div class="gameboard">
-            <div class="square"> </div>
-            <div class="square"> </div>
-            <div class="square"> </div>
-            <div class="square"> </div>
-            <div class="square"> </div>
-            <div class="square"> </div>
-            <div class="square"> </div>
-            <div class="square"> </div>
-            <div class="square"> </div>
+            <!-- <button class="square">1</button>
+            <button class="square">2</button>
+            <button class="square">3</button>
+            <button class="square">4</button>
+            <button class="square">5</button>
+            <button class="square">6</button>
+            <button class="square">7</button>
+            <button class="square">8</button>
+            <button class="square">9</button> -->
         </div>
         <div class="scores">
             <div class="p1">
                 <div class="name">P1</div>
-                <div class="p1_score">1</div>
+                <div class="p1_score">0</div>
             </div>
             <div class="opponent">
                 <div class="name_and_difficulty">
